--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
-# Compiled class file
+# Java compiled class files
 *.class
 
-# Log file
-*.log
+# IDE configuration files
+*.iml
+.idea/
+.vscode/
 
-# BlueJ files
-*.ctxt
+# macOS system files
+.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Build output directories
+out/
+target/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
